--- a/X-DEVS/index.html
+++ b/X-DEVS/index.html
@@ -9,8 +9,9 @@
 	<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="./src/css/reset.css">
-
 	<link rel="stylesheet" href="./src/css/estilos.css">
+	<link rel="stylesheet" href="./src/css/responsivo.css">
+
 </head>
 
 <body>
@@ -22,7 +23,7 @@
 			<img src="./src/imagens/seta.png" alt="seta para voltar a imagem">
 		</button>
 
-		<ul class="lista-persoangens">
+		<ul class="lista-personagens">
 			<li class="cartao selecionado fundo-1"> 
 				<h2 class="nome">Seu Clope</h2>
 
